# frm

./: pyproject.toml
assignements/cpp_basis/: anagrams.cpp  basis.cpp  mai  main
assignements/hackerRank/: 1.cpp  10.notations_scientific.cpp  10.notations_scientific_hex_tronc.cpp  11.exception_bad_length.cpp  12.class_sub_class_virtual_override.cpp  13.inheritence.cpp  14.inheritence_two_level_sub_class.cpp  15.string_stream.cpp  16.string_size_pos_manip.cpp  17.inheritence_avec_nb.cpp  18.erase_in_vector.cpp  19.inherithence_multiple.cpp  2.pointeur.cpp  20.disscussion_instantanée_with_class.cpp  21.fleches.cpp  22.class_template.cpp  3.cin_decreasing_print.cpp  4.array.cpp  5.order_array.cpp  6.errase_in_array.cpp  7.give_position_in_array.cpp  8.set.cpp  9.map_dict.cpp  mai
assignements/vitol_cpp/: Makefile  bootstrap.hpp  cpp_readme.md  curve_builder.hpp  gnuplot_plotter.hpp  mai  main.cpp  main_bsp.cpp  main_option.cpp  main_test  main_test.cpp  main_test_math_utils  main_test_math_utils.cpp  math_utils.hpp  math_utils_test.cpp  monte_carlo.hpp  monte_carlo_test.cpp  payoff_model.hpp  porfolio_calculator_test.cpp  portfolio_calculator.hpp  pricing_calculator.hpp  pricing_model_2.cpp  pricing_models.hpp  risk_engine  (+5 more)
montecarlo_credit_risk/: credit_risk.IPYNB  credit_risk.py  interest_rates_DV01_risk.IPYNB  interest_rates_DV01_risk.py  option_risk_one.IPYNB  options_risk.IPYNB  options_risk.py  pyproject.toml
part 2/: arbitrage_pricing.ipynb  copula_model_multivariate_david_li.ipynb  order_statistic_high_sample.ipynb  order_statistic_low_sample.ipynb  qq.ipynb
(+8 files in other folders)
