[tool.poetry]
name = "frm"
version = "0.1.0"
description = ""
authors = ["MiletoCarmelo <carmelo.mileto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


