[project]
name = "montecarlo-credit-risk"
version = "0.1.0"
description = ""
authors = [
    {name = "carmelo mileto",email = "cmileto@mercuria.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
